--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,13 @@
 body {
-  background-color: #fdfdf5;
+  background-color: #fdfcf5;
+}
+
+h2 {
+  color: #460080;
+}
+
+h3, h5, h6 {
+  color: #3b3b3b;
 }
 
 .welcome-box {
@@ -10,9 +18,9 @@ body {
 .welcome-box .slogan {
   width: 100%;
   height: 50%;
-  background: url("../img/candy15.jpg");
-  background-size: contain;
-  background-repeat: space;
+  background: url("../img/candy11.jpg");
+  background-size: cover;
+  background-position: center;
   position: relative;
 }
 
@@ -28,7 +36,7 @@ body {
 }
 
 .welcome-box .general-menu {
-  font-family: 'Rubik';
+  font-family: "Rubik";
   width: 100%;
   height: 35%;
   -webkit-box-align: top;
@@ -102,8 +110,8 @@ body {
   width: -moz-max-content;
   width: max-content;
   text-align: center;
-  font-family: 'Nunito Sans';
-  border: 0.2rem #ffd000 solid;
+  font-family: "Nunito Sans";
+  border: 0.2rem #ee98c7 solid;
   border-radius: 2rem;
   font-weight: bold;
 }
@@ -112,7 +120,7 @@ body {
   top: -16px;
   left: 47%;
   background-color: #fdfdf5;
-  color: #ffd000;
+  color: #ee98c7;
   text-shadow: #e7e7e7 2px -1px 3px;
   font-size: 1.2rem;
 }
@@ -120,5 +128,89 @@ body {
 .welcome-box .addition span {
   padding-right: 1rem;
   padding-left: 1rem;
+}
+
+.milkshake {
+  height: 100vh;
+}
+
+.milkshake .imgslogan {
+  width: 40%;
+  background-image: url("../img/candy9,3.jpg");
+  background-size: cover;
+  background-position: bottom;
+  position: relative;
+}
+
+.milkshake .milk-menu {
+  width: 45%;
+  font-family: "Rubik";
+}
+
+.milkshake .milk-menu .normal h2 {
+  font-weight: bold;
+}
+
+.milkshake .milk-menu .normal hr {
+  border: 0.1rem dashed grey;
+}
+
+.milkshake .milk-menu .normal .d-flex {
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.milkshake .milk-menu .normal .toppers {
+  border: #ee98c7 0.2rem solid;
+  border-radius: 2rem;
+  padding-top: 1.1rem !important;
+  padding-bottom: 0.6rem !important;
+}
+
+.milkshake .milk-menu .normal .toppers .add {
+  font-weight: bold;
+  top: -15px;
+  left: 35px;
+  background-color: #fdfcf5;
+}
+
+.milkshake .milk-menu .special .d-flex {
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.milkshake .milk-menu .special hr {
+  border: 0.12rem dashed grey;
+}
+
+.milkshake .milk-menu .special .options {
+  -webkit-box-align: top;
+      -ms-flex-align: top;
+          align-items: top;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.milkshake .milk-menu .special .options .option {
+  width: 50%;
+}
+
+.milkshake .milk-menu .special .options .option h5 {
+  font-weight: bold;
+}
+
+.milkshake .milk-menu .special .options .option h6 {
+  color: #ee98c7;
 }
 /*# sourceMappingURL=style.css.map */
