--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,9 +26,9 @@ h3, h5, h6{
 			position: absolute;
 			bottom: 0;
 			left: 0;
-			height: 45%;
+			height: 68%;
 			width: 100%;
-			background: url("../img/wave7.svg");
+			background: url("../img/wave5.svg");
 			background-size: cover;
 		}
 	}
@@ -100,7 +100,7 @@ h3, h5, h6{
 	height: 100vh;
 	.imgslogan {
 		width: 40%;
-		background-image: url("../img/candy9,3.jpg");
+		background-image: url("../img/candy9,2.jpg");
 		background-size: cover;
 		background-position: bottom;
 		position: relative;
@@ -155,5 +155,60 @@ h3, h5, h6{
 				}
 			}
 		}
+	}
+}
+.treatsndrinks{
+	font-family: 'Rubik';
+	width:100%;
+	height:100vh;
+	display:flex;
+	align-items: top;
+	justify-content: space-between;
+	.drinkmenu{
+		width:60%;
+		.milkyones{
+			margin-left:6rem;
+			align-items: top;
+			justify-content: space-between;
+			.treats{
+				width: 50%;
+				.element{
+					align-items: top;
+					justify-content: space-between;
+				}
+				hr {
+					border: 0.12rem dashed grey;
+				}
+			}
+			.bottleddrinks{
+				margin-left: 5rem;
+				width: 50%;
+				hr {
+					border: 0.12rem dashed grey;
+				}
+				.element{
+					align-items: top;
+					justify-content: space-between;
+				}
+			}
+		}
+		.colddrinks{
+			width:80%;
+			margin-left:6rem;
+			hr {
+				border: 0.12rem dashed grey;
+				
+			}
+			.element{
+				align-items: top;
+				justify-content: space-between;
+			}
+		}
+	}
+	.drinkimg{
+		width:40%;
+		height:100%;
+		background: url("../img/candy8,1.jpg");
+		background-size: cover;
 	}
 }
